syntax = "proto3";

package livechat;

service LiveChatService {
  rpc ChatLive (stream ChatRequest) returns (stream ChatResponse);
}

message ChatRequest {
  string user_message = 1;
}

message ChatResponse {
  string bot_reply = 1;
}
